fix letter spacing

--- a/css/creative.css
+++ b/css/creative.css
@@ -267,7 +267,7 @@ header .header-content .header-content-inner #stiker {
   margin: 30px 0;
 }
 #undangan .salam {
-  letter-spacing: 5px;
+  letter-spacing: 2px;
 }
 #footer {
   background-color: #222222;
